This file summarizes changes in WinMerge releases.
Numbers in parentheses refer to SourceForge.net tracker item numbers (#XXXXX) or
to Subversion revision numbers (rXXXXX).

WinMerge 2.7.5.5
  Add Croatian translation (#1820308)
  Translation updates:
  - Chinese Traditional (#1824691)

WinMerge 2.7.5.4 - 2007-11-01 (r4687)
  New PO files based translation system (#1804762)
  New folder compare column selection dialog (#1804555)
  Install WinMerge.exe (ANSI version) only for Windows 95/98/ME (#1809140)
  Better multi-monitor support, with option to lock panes (#1788168)
  Installer: Install PO files and MergeLang.dll (#1820689)
  BugFix: Ignored differences were merged when merging multiple
    differences (#1811745)
  Bugfix: Don't clear selection when right-clicking outside it (#1814184)
  Bugfix: Configuration log labeled Vista as Longhorn (#1815859)
  Bugfix: Customized text color for ignored differences didn't shown (#1807895)
  Translation updates:
  - Chinese Traditional (#1810192, #1810541)
  - Italian (#1805044)

WinMerge 2.7.5.3 - 2007-09-27 (r4572)
  Use PO files for translations (generate RC-files from PO-files)
  Add Portuguese translation (#1756364)
  Change Up/Down button names in folder compare columns dialog(#1800064)
  BugFix: Fix MakeResDll crash (#1795421)
  BugFix: Full screen mode didn't work with multiple monitors (#1788168)
  Bugfix: Revert multiple monitor patches (#1788168)
  BugFix: PgUp key didn't do anything in beginning of the file (#1795680)
  BugFix: The option 'Automatically scroll to first difference' didn't work
    properly when word-wrap mode was on (#1795814)
  Translation updates:
  - French (#1800064, #1802363)
  - Japanese (r4546)

WinMerge 2.7.5.2 - 2007-09-11 (r4528)
  Graphical improvements to location pane (#1770175)
  Remove MFC dependency from resource compiler (#1783581)
  Better multi-monitor support (split file view on monitor boundary) (#1788168)